--- a/index.html
+++ b/index.html
@@ -2,104 +2,137 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <style>
-        html,
-        body,
-        .frame {
-            width: 1080px;
-            height: 800px;
-            margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-                Droid Sans, Helvetica Neue, sans-serif;
-            padding: 20px;
-            font-size: 14px;
-            border: none;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>avatar maker</title>
+  <style>
+    html,
+    body,
+    .frame {
+      width: 1080px;
+      height: 800px;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
+        Droid Sans, Helvetica Neue, sans-serif;
+      padding: 20px;
+      font-size: 14px;
+      border: none;
+    }
 
-        .warning {
-            background-color: #df68a2;
-            padding: 3px;
-            border-radius: 5px;
-            color: white;
-        }
-    </style>
+    h2 {
+      text-transform: lowercase;
+    }
+
+    .warning {
+      background-color: #df68a2;
+      padding: 3px;
+      border-radius: 5px;
+      color: white;
+      font-size: 13px;
+    }
+
+    button {
+      background-color: #000;
+      color: #fff;
+      border: none;
+      padding: 10px 18px;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #333;
+    }
+
+    #avatarUrl {
+      margin-top: 15px;
+      font-size: 13px;
+    }
+
+    .copy-btn {
+      background-color: #df68a2;
+      margin-left: 10px;
+      font-size: 12px;
+      padding: 6px 10px;
+    }
+  </style>
 </head>
 
 <body>
-    <h2>Ready Player Me iframe example</h2>
-    <ul>
-        <li>Click the "Open Ready Player Me" button.</li>
-        <li>Create an avatar and click the "Done" button when you're done customizing.</li>
-        <li>After creation, this parent page receives the URL to the avatar.</li>
-        <li>The Ready Player Me window closes and the URL is displayed.</li>
-    </ul>
-    <p class="warning">
-        If you have a subdomain, replace the 'demo' subdomain in the iframe source URL with yours.
-    </p>
+  <h2>ready player me - model maker</h2>
 
-    <input type="button" value="Open Ready Player Me" onClick="displayIframe()" />
-    <p id="avatarUrl">Avatar URL:</p>
+  <button onclick="displayIframe()">open</button>
 
-    <iframe id="frame" class="frame" allow="camera *; microphone *; clipboard-write" hidden></iframe>
+  <p class="warning">replace 'demo' with your subdomain if needed</p>
 
-    <script>
-        const subdomain = 'demo'; // Replace with your custom subdomain
-        const frame = document.getElementById('frame');
+  <p id="avatarUrl">avatar url: <span id="urlText">none yet</span>
+    <button class="copy-btn" onclick="copyUrl()">copy</button>
+  </p>
 
-        frame.src = `https://${subdomain}.readyplayer.me/avatar?frameApi`;
+  <iframe id="frame" class="frame" allow="camera *; microphone *; clipboard-write" hidden></iframe>
 
-        window.addEventListener('message', subscribe);
-        document.addEventListener('message', subscribe);
+  <script>
+    const subdomain = 'demo';
+    const frame = document.getElementById('frame');
+    const urlText = document.getElementById('urlText');
 
-        function subscribe(event) {
-            const json = parse(event);
+    frame.src = `https://${subdomain}.readyplayer.me/avatar?frameApi`;
 
-            if (json?.source !== 'readyplayerme') {
-                return;
-            }
+    window.addEventListener('message', subscribe);
+    document.addEventListener('message', subscribe);
 
-            // Susbribe to all events sent from Ready Player Me once frame is ready
-            if (json.eventName === 'v1.frame.ready') {
-                frame.contentWindow.postMessage(
-                    JSON.stringify({
-                        target: 'readyplayerme',
-                        type: 'subscribe',
-                        eventName: 'v1.**'
-                    }),
-                    '*'
-                );
-            }
+    function subscribe(event) {
+      const json = parse(event);
 
-            // Get avatar GLB URL
-            if (json.eventName === 'v1.avatar.exported') {
-                console.log(`Avatar URL: ${json.data.url}`);
-                document.getElementById('avatarUrl').innerHTML = `Avatar URL: ${json.data.url}`;
-                document.getElementById('frame').hidden = true;
-            }
+      if (json?.source !== 'readyplayerme') return;
 
-            // Get user id
-            if (json.eventName === 'v1.user.set') {
-                console.log(`User with id ${json.data.id} set: ${JSON.stringify(json)}`);
-            }
-        }
+      if (json.eventName === 'v1.frame.ready') {
+        frame.contentWindow.postMessage(
+          JSON.stringify({
+            target: 'readyplayerme',
+            type: 'subscribe',
+            eventName: 'v1.**'
+          }),
+          '*'
+        );
+      }
 
-        function parse(event) {
-            try {
-                return JSON.parse(event.data);
-            } catch (error) {
-                return null;
-            }
-        }
+      if (json.eventName === 'v1.avatar.exported') {
+        const url = json.data.url;
+        console.log(`Avatar URL: ${url}`);
+        urlText.textContent = url;
+        frame.hidden = true;
+      }
 
-        function displayIframe() {
-            document.getElementById('frame').hidden = false;
-        }
-    </script>
+      if (json.eventName === 'v1.user.set') {
+        console.log(`User with id ${json.data.id} set: ${JSON.stringify(json)}`);
+      }
+    }
+
+    function parse(event) {
+      try {
+        return JSON.parse(event.data);
+      } catch {
+        return null;
+      }
+    }
+
+    function displayIframe() {
+      frame.hidden = false;
+    }
+
+    function copyUrl() {
+      const text = urlText.textContent;
+      if (text && text !== 'none yet') {
+        navigator.clipboard.writeText(text);
+        alert('Avatar URL copied!');
+      }
+    }
+  </script>
 </body>
 
 </html>
